--- a/src/style/form.css
+++ b/src/style/form.css
@@ -7,7 +7,7 @@
 */
 
 .form-bg {
-    background-color: #bdcd31;
+    background-color: #39415e;
     display: inline-block;
     justify-content: center;
     align-items: center;
@@ -28,13 +28,58 @@
     text-align: center;
     color: #fefefe;
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 .ui.form.input {
-    width: 366px;
+    /*width: 366px;
     height: 38px;
     border: solid 1.2px var(--white);
-    border-radius: 18px;
+    border-radius: 18px;*/
+    width: 366px;
+    height: 38px;
+    border-radius: 19.2px;
+    background-color: #ffffff;
+    border-radius: 35px;
+}
+
+.submitButton {
+    width: 171px;
+    height: 46px;
+    background-color: #f7a039;
+    border-radius: 50px;
+    font-size: 24px;
+    color: #ffffff;
+    border: none;
+}
+
+.goToRegister {
+    width: 366px;
+    height: 42px;
+    font-family: PloniDL1.1AAA;
+    font-size: 15.6px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.38;
+    letter-spacing: normal;
+    text-align: center;
+    color: #ffffff;
+    margin: auto;
+    margin-top: 10px;
+}
+
+.socialLogin {
+    width: 400px;
+    margin-left: 12%;
+    margin-top: 10%;
+}
+
+.ui .large .form {
+    width: 366px;
+    height: 38px;
+    border-radius: 30px;
+    background-color: #ffffff;
 }
 
 .ui.teal.button {
@@ -83,19 +128,29 @@
     margin: 2% !important;
     width: 160px !important;
 }
- 
+
 .formGroup {
     display: flex;
     justify-content: space-between;
     align-items: space-between;
-    margin:3%;
+    margin: 3%;
 }
 
 .formOne {
     display: flex;
     align-items: center;
     flex-direction: row;
-    margin:3%;
+    margin: 3%;
+}
+
+.formOne .field {
+    border: solid 1px #6e6d71;
+}
+
+.field .input:focus {
+    border-radius: 3px;
+    border: solid 2px #97a50f;
+    background-color: #f6f6f6;
 }
 
 .langField {
@@ -103,7 +158,7 @@
     width: 400px;
 }
 
-.ui.selection.dropdown{
+.ui.selection.dropdown {
     padding: 5%;
     width: 400px !important;
     height: 55px;
@@ -125,10 +180,9 @@
     height: 55px;
     border-radius: 3px;
     background-color: #f6f6f6;
-    
 }
 
-.allForm{
+.allForm {
     padding: 3%;
 }
 
@@ -138,7 +192,7 @@
     background-color: #f6f6f6;
 }
 
-.ui.multiple.dropdown{
+.ui.multiple.dropdown {
     margin: inherit;
 }
 
