--- a/src/style/routePreview.css
+++ b/src/style/routePreview.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   justify-items: center;
+  margin: auto;
 }
 
 .routePreview {
@@ -17,8 +18,8 @@
 
 .mapRoute {
   margin-left: 17px;
-  width: 23vw !important;
-  height: 67vh;
+  width: 90% !important;
+  height: 60%;
 }
 
 /****************STOP Preview************/
@@ -32,8 +33,7 @@
   width: 250px;
   height: 78px;
   border-radius: 16px;
-  box-shadow: 0 2px 35px 0 rgba(212, 212, 212, 0.5),
-    0 2px 4px 0 rgba(197, 197, 197, 0.5);
+  box-shadow: 0 2px 35px 0 rgba(212, 212, 212, 0.5), 0 2px 4px 0 rgba(197, 197, 197, 0.5);
   background-color: #ffffff;
   display: flex;
   justify-items: center;
@@ -89,6 +89,7 @@
   color: #ff8900;
   padding: 5%;
 }
+
 .routeDetails {
   display: flex;
   flex-direction: column;
@@ -104,8 +105,7 @@
   background-color: #ffffff;
 }
 
-.ListItemEven,
-.ListItemOdd {
+.ListItemEven, .ListItemOdd {
   display: flex;
   align-items: center;
   justify-content: center;
