--- a/src/style/tollbar.css
+++ b/src/style/tollbar.css
@@ -3,11 +3,11 @@
 .mainToolbar {
     width: 15%;
     height: 1080px;
-    background-color: #bdcd31;
+    background-color: #39415e;
 }
 
-.ui.fixed.menu{
+.ui.fixed.menu {
     width: 298px;
     height: 1080px;
-    background-color: #bdcd31;  
+    background-color: #39415e;
 }
