--- a/src/features/home/index.css
+++ b/src/features/home/index.css
@@ -237,10 +237,15 @@ a {
     padding-top: 107px !important;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 #section1 {
     padding-top: 50px !important;
     margin-bottom: 150px;
     margin-top: 50px !important;
+    behavior: "smooth"
 }
 
 #section2 {
@@ -252,9 +257,9 @@ a {
 
 #section3 {
     margin-top: 350px;
+    height: 650px;
+    margin-bottom: 200px;
 }
-
-.guideSelectionPic {}
 
 .guideSection {
     display: flex;
@@ -436,7 +441,50 @@ a {
     color: #7e8085;
 }
 
-.contactButton{
+.contactButton {
     margin-top: 40px;
     padding-left: 25px;
+}
+
+.press {
+    display: table;
+    /* Required for table-cell to work on li's */
+    padding: 0;
+    /* Override defaults for lists */
+    margin: 0;
+    /* Override defaults for lists */
+    width: 100%;
+    /* Get the row full width */
+    text-align: center;
+    /* Centre align grid items */
+}
+
+.press li {
+    display: table-cell;
+    /* Get all images to show in a row */
+    text-align: center;
+    /* Centre align the images */
+}
+
+@media (max-width: 960px) and (min-width: 501px) {
+    .press li {
+        width: 50%;
+    }
+    /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
+}
+
+@media (max-width: 500px) {
+    .press li {
+        width: 100%;
+    }
+    /* On small screens, show one logo per row */
+}
+
+@media (max-width: 960px) {
+    .press {
+        display: block;
+    }
+    .press li {
+        display: inline-block;
+    }
 }
