--- a/src/style/form.css
+++ b/src/style/form.css
@@ -263,3 +263,84 @@
     margin-bottom: 5px;
     margin-top: 20px;
 }
+
+/*profile media*/
+
+.profilePicture {
+    width: auto;
+    height: 340px;
+    margin: 4%;
+    border-radius: 2.4px;
+    background-color: #f6f6f6;
+    font-family: PloniDL1.1AAA;
+    font-size: 18px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.33;
+    letter-spacing: normal;
+    text-align: center;
+    color: #6e6d71;
+}
+
+.profileSave {
+    width: 171px;
+    height: 46px;
+    border-radius: 24px;
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.21);
+    background-color: #f8a12a;
+    text-align: center;
+    color: #ffffff;
+    font-size: 17px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 0.85;
+    letter-spacing: 0.32px;
+    margin: 2%;
+}
+
+.combineMedia {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.profileImgObj {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 3%;
+}
+
+.profileImg {
+    width: 220px;
+    height: 220px;
+    margin: auto;
+}
+
+.profileHeader {
+    font-family: PloniDL1.1AAA;
+    font-size: 18px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.33;
+    letter-spacing: normal;
+    text-align: center;
+    color: #6e6d71;
+}
+
+div[disabled] {
+    pointer-events: none;
+    opacity: 0.3;
+}
+
+.vertical {
+    border-left: 3px solid black;
+    height: 250px;
+    position: absolute;
+    left: 50%;
+}
