--- a/src/style/tourControl.css
+++ b/src/style/tourControl.css
@@ -24,6 +24,11 @@
   background-color: white;
 }
 
+.stopCardTitle {
+  font-size: 16px;
+  width: 260px
+}
+
 .cardHeaders {
   vertical-align: top;
 }
